# ardrone_controller

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Doxyfile  package.xml
doxygen/latex/: Makefile  annotated.tex  classardroneguicontroller_1_1ardroneGUIController.tex  classbasicdronecontroller_1_1basicDroneController.tex  classbasicdronecontroller_1_1basicDroneController__coll__graph.dot  classbasicdronecontroller_1_1basicDroneController__coll__graph.md5  classbasicdronecontroller_1_1basicDroneController__inherit__graph.dot  classbasicdronecontroller_1_1basicDroneController__inherit__graph.md5  classbasicdronecontroller_1_1droneStatus.tex  classbasicdronecontroller_1_1droneStatus__coll__graph.dot  classbasicdronecontroller_1_1droneStatus__coll__graph.md5  classbasicdronecontroller_1_1droneStatus__inherit__graph.dot  classbasicdronecontroller_1_1droneStatus__inherit__graph.md5  classclusterClass_1_1Cluster.tex  classclusterClass_1_1Point.tex  classclusterClass_1_1clusterNode.tex  (+17 more)
launch/: ardronePackage.launch  joystick.launch  rviz_ardrone.launch  slam.launch  staircasedetection.rviz
media/: ailogo.xcf  gamepadlogo.xcf  keyboardlogo.xcf  settingslogo.xcf  softwarelogo.xcf
model/: ardrone2.xml
scripts/: Doxyfile  ardrone_gui_controller.py  ardroneguicontroller.py  basicdronecontroller.py  clusterClass.py  clusterNode.py  clustering.py  gamepadcontroller.py  keyboardcontroller.py  markerClass.py  pointPublisher.py  point_publisher.py  settingviewer.py  staircaseai.py  subscriber.py  target_marker.py
src/: ardrone_gui_controller.py  drone_controller.py  gamepad.xcf
