<?xml version="1.0"?>
<package>
  <name>ardrone_controller</name>
  <version>0.0.0</version>
  <description>The ardrone_controller package</description>

  <maintainer email="olivier@todo.todo">Olivier De Meyst and Thijs Goethals</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>joy</run_depend>

</package>